# Quant-Trading-Agent-Based

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: data-agent.md  programmer-agent.md  quant-alpha-researcher.md  research-agent.md  review-agent.md  risk-agent.md
Quant-Research-KB/.obsidian/: app.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
Quant-Research-KB/01_Concepts/: Funding Rate.md
Quant-Research-KB/02_Alpha_Ideas/: crypto_cross_sectional_altcoin_carry.md  crypto_oi_momentum_reversal.md
Quant-Research-KB/05_Paper_Notes/: paper_fan_2024_crypto_carry_trade.md  paper_giagkiozis_2024_oi_reconciliation_perps.md  paper_schmeling_2023_crypto_carry_bis.md
Quant-Research-KB/99_Templates/: T_Alpha_Idea.md  T_Backtest_Request.md  (+3 more)
alpha_idea/: 01_crypto_funding_rate_carry.md
configs/: README.md
memory/: ALPHA_BACKLOG.md  DECISIONS.md  PROJECT_STATE.md  RESEARCH_LOG.md  SOURCE_TRACKER.md  SYSTEM_MAP.md
paper_trading/: README.md
reports/: README.md
research_memory/: ALPHA_BACKLOG.md  DECISIONS.md  PROJECT_STATE.md  RESEARCH_LOG.md  SOURCE_TRACKER.md
scripts/: fetch_glassnode_data.py  llm_router_cli.py  run_crypto001_backtest.py  run_crypto001_backtest_real.py  run_dashboard.py  run_eth_backtest.py
src/: README.md
templates/: alpha_discovery_note.md  alpha_research_memo_template.md  backtest_report.md  data_quality_report.md  llm_routing_log.md  llm_task_request.md  paper_summary.md  programmer_handoff.md  research_memo.md  research_session_log.md  review_report.md  risk_review.md
(+133 files in other folders)
