[project]
name = "quant-trading-agent-based"
version = "0.1.0"
description = "Five-agent AI-powered quantitative trading research and strategy development platform"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "streamlit>=1.28",
    "pandas>=2.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.39",
]
deepseek = [
    "openai>=1.0",
]
dashboard = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "plotly>=5.0",
]
all = [
    "anthropic>=0.39",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "streamlit>=1.28",
    "pandas>=2.0",
    "plotly>=5.0",
]

[project.scripts]
llm-router = "scripts.llm_router_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
